--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,7 +69,7 @@ $breakpoint-xl: 1280px;
 
 // Container
 $container-max-width: 1200px;
-$container-padding: 1.5rem;
+$container-padding: 1rem;
 
 // Transitions
 $transition-base: 0.3s ease;
